--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.7.0",
     "axios": "^1.4.0",
+    "khalti-checkout-web": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
